[package]
name = "pam-kv"
version = "0.1.0"
authors = [
    "Anthony Nowell <anowell@gmail.com>",
    "Steve Fan <29133953+stevefan1999-personal@users.noreply.github.com>"
]
edition = '2021'

[lib]
name = "pam_kv"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.66"
argon2 = "0.4.1"
balloon-hash = "0.3.0"
bcrypt-pbkdf = "0.9.0"
csv-async = { version = "1.2.4", features = ["tokio"] }
log = "0.4.17"
pam-module = { path = "../pam/" }
password-hash = "0.4.2"
pbkdf2 = "0.11.0"
scrypt = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
simplelog = { version = "0.12.0", features = ["paris"] }
tap = "1.0.1"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.11"
