[package]

name = "pam"
description = "PAM bindings for Rust"
version = "0.1.0"
authors = [ "Anthony Nowell <anowell@gmail.com>" ]
repository = "https://github.com/anowell/pam-rs"
readme = "README.md"
keywords = ["pam", "ffi", "linux", "authentication"]
license = "MIT"

[lib]
name = "pam"

[dependencies]
libc = "~0.1.5"
